[package]
name = "bevy_mod_fast_scene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = { version = "0.11.0-dev", path = "../../gitimpo/bevy", default-features = false, features = [
  "bevy_asset",
  "bevy_pbr",
  "bevy_scene",
] }
bitflags = "2.3"
rkyv = "0.7.42"
basis-universal = "0.3"
tmf = { version = "0.1.1", path = "../../gitimpo/tmf" }